--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,11 @@
     padding: 15px;
     margin-bottom: 20px;
 }
+
+.blog {
+    padding-top: 10px;
+    padding-left: 2px;
+    border: solid;
+    border-width: 1px;
+    margin-bottom: 5px;
+}
